--- a/main.html
+++ b/main.html
@@ -1,3 +1,6 @@
+hemp me to add and display the total sum of the prices with add another row in the last of the table
+html:
+
 <!DOCTYPE html>
 
 <html>
@@ -8,7 +11,7 @@
 
 <body>
     <!-- the entire body must be written by student -->
-    <table style="width: 100%">
+    <table style="width: 100%" id="table">
     <caption>
       Monthly savings
     </caption>
